tests/ui/specialization/issue-39618.stderr
error[E0391]: cycle detected when computing whether impls specialize one another
  --> $DIR/issue-39618.rs:19:1
   |
LL | impl<T> Foo for T where T: Bar {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   - which requires evaluating trait selection obligation `u64: Bar`...
   - which again requires computing whether impls specialize one another, completing the cycle
note: cycle used when building specialization graph of trait `Foo`
  --> $DIR/issue-39618.rs:7:1
   |
LL | trait Foo {
   | ^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
